--- a/ex1.html
+++ b/ex1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    export const handler = async (event) => { const response = { statusCode: 200, body: JSON.stringify('Hello from
-    Lambda!'), }; return response; };
+    <script src="ex1.js"></script>
+    export const handler = async (event) => { const response = { statusCode: 200, body: JSON.stringify('Hello fromLambda!'), }; return response; };
   </body>
 </html>
