--- a/観光スポット.html
+++ b/観光スポット.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8" />
-    <title>観光マップ with スライドカード</title>
+    <meta charset="UTF-8" />
+    <title>カードスライドショー</title>
     <style>
-      #map {
-        height: 100vh;
-        width: 100%;
-      }
-
-      .card-container {
+      #photo {
         position: absolute;
         bottom: 0;
         left: 0;
         right: 0;
-        padding: 10px;
-        display: flex;
-        overflow-x: auto;
-        background: rgba(255, 255, 255, 0.9);
+        background: rgba(255, 255, 255, 0.95);
+        padding: 16px;
+        text-align: center;
       }
 
       .card {
-        flex: 0 0 80%;
+        width: 90%;
+        margin: 0 auto;
         background: white;
-        margin-right: 10px;
         padding: 16px;
-        border-radius: 16px;
+        border-radius: 10px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
       }
 
@@ -33,46 +27,104 @@
         width: 100%;
         border-radius: 8px;
       }
+
+      span {
+        font-size: 2rem;
+        cursor: pointer;
+        margin: 0 10px;
+      }
+
+      button {
+        margin-top: 10px;
+      }
     </style>
   </head>
   <body>
-    <div id="map"></div>
-
-    <!-- スライド可能なカード -->
-    <div class="card-container">
-      <div class="card">
-        <h2>渓雲閣</h2>
-        <img src="https://source.unsplash.com/400x200/?onsen" alt="温泉1" />
-        <p>にごり湯をかけ流し！</p>
-      </div>
-      <div class="card">
-        <h2>下藤屋</h2>
-        <img src="https://source.unsplash.com/400x200/?hotel" alt="温泉2" />
-        <p>山の中の癒しの宿。</p>
-      </div>
-      <div class="card">
-        <h2>〇〇旅館</h2>
-        <img src="https://source.unsplash.com/400x200/?spa" alt="温泉3" />
-        <p>歴史ある露天風呂。</p>
+    <div id="photo">
+      <span id="left">←</span>
+      <span id="right">→</span>
+      <div class="card" id="mainCard">
+        <h2 id="title"></h2>
+        <img id="mainImg" src="" />
+        <p id="desc"></p>
       </div>
     </div>
 
-    <!-- Google Maps API -->
     <script>
-      function initMap() {
-        const center = { lat: 37.115, lng: 139.98 };
-        const map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 15,
-          center: center
-        });
+      'use strict';
 
-        new google.maps.Marker({
-          position: center,
-          map: map,
-          title: '渓雲閣'
-        });
+      /* カード情報リスト */
+      const cards = [
+        {
+          title: '渓雲閣',
+          img: 'images/01.jpg',
+          desc: 'にごり湯をかけ流し！'
+        },
+        {
+          title: '下藤屋',
+          img: 'images/02.jpg',
+          desc: '山の中の癒しの宿'
+        },
+        {
+          title: '〇〇旅館',
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        }
+        // ... 必要に応じて追加
+      ];
+
+      let current = 0;
+
+      const title = document.getElementById('title');
+      const img = document.getElementById('mainImg');
+      const desc = document.getElementById('desc');
+      const leftArrow = document.getElementById('left');
+      const rightArrow = document.getElementById('right');
+
+      function setCard() {
+        title.textContent = cards[current].title;
+        img.src = cards[current].img;
+        desc.textContent = cards[current].desc;
       }
+
+      document.addEventListener('DOMContentLoaded', () => {
+        setCard();
+      });
+
+      leftArrow.addEventListener('click', () => {
+        if (current > 0) {
+          current--;
+          setCard();
+        }
+      });
+
+      rightArrow.addEventListener('click', () => {
+        if (current < cards.length - 1) {
+          current++;
+          setCard();
+        }
+      });
+
+      /* 自動再生ボタン */
+      const button = document.createElement('button');
+      button.textContent = '自動再生する';
+      document.getElementById('photo').appendChild(button);
+
+      let autoplay = false;
+      button.addEventListener('click', () => {
+        if (autoplay === false) {
+          button.textContent = '停止する';
+          autoplay = setInterval(() => {
+            current++;
+            if (current >= cards.length) current = 0;
+            setCard();
+          }, 2000);
+        } else {
+          clearInterval(autoplay);
+          autoplay = false;
+          button.textContent = '自動再生する';
+        }
+      });
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAanGL60bWCdRLdFjyk-Xf_UI-HPnbHgXc&callback=initMap"></script>
   </body>
 </html>
