--- a/観光スポット.html
+++ b/観光スポット.html
@@ -2,14 +2,15 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>カードスライドショー</title>
+    <title>Googleマップ＋カードスライド</title>
     <style>
+      #map {
+        height: 400px;
+        width: 100%;
+      }
+
       #photo {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background: rgba(255, 255, 255, 0.95);
+        background: #fff;
         padding: 16px;
         text-align: center;
       }
@@ -17,10 +18,9 @@
       .card {
         width: 90%;
         margin: 0 auto;
-        background: white;
+        background: #f0f0f0;
         padding: 16px;
         border-radius: 10px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
       }
 
       .card img {
@@ -40,6 +40,8 @@
     </style>
   </head>
   <body>
+    <div id="map"></div>
+
     <div id="photo">
       <span id="left">←</span>
       <span id="right">→</span>
@@ -50,10 +52,8 @@
       </div>
     </div>
 
+    <!-- カードスライドJS -->
     <script>
-      'use strict';
-
-      /* カード情報リスト */
       const cards = [
         {
           title: '渓雲閣',
@@ -66,11 +66,10 @@
           desc: '山の中の癒しの宿'
         },
         {
-          title: '〇〇旅館',
+          title: '旅館〇〇',
           img: 'images/03.jpg',
           desc: '歴史ある露天風呂'
         }
-        // ... 必要に応じて追加
       ];
 
       let current = 0;
@@ -104,27 +103,28 @@
           setCard();
         }
       });
-
-      /* 自動再生ボタン */
-      const button = document.createElement('button');
-      button.textContent = '自動再生する';
-      document.getElementById('photo').appendChild(button);
-
-      let autoplay = false;
-      button.addEventListener('click', () => {
-        if (autoplay === false) {
-          button.textContent = '停止する';
-          autoplay = setInterval(() => {
-            current++;
-            if (current >= cards.length) current = 0;
-            setCard();
-          }, 2000);
-        } else {
-          clearInterval(autoplay);
-          autoplay = false;
-          button.textContent = '自動再生する';
-        }
-      });
     </script>
+
+    <!-- Google Maps API -->
+    <script>
+      function initMap() {
+        const center = { lat: 37.115, lng: 139.98 };
+        const map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: center
+        });
+
+        new google.maps.Marker({
+          position: center,
+          map: map,
+          title: '渓雲閣'
+        });
+      }
+    </script>
+    <script
+      async
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAanGL60bWCdRLdFjyk-Xf_UI-HPnbHgXc&callback=initMap"
+    ></script>
   </body>
 </html>
