--- a/観光スポット2.html
+++ b/観光スポット2.html
@@ -21,10 +21,11 @@
       }
 
       .card {
-        flex: 0 0 80%;
+        flex: 0 0 100%;
+        display: flex;
+        flex-direction: column;
         background: white;
-        margin-right: 10px;
-        padding: 16px;
+        padding: 10px;
         border-radius: 16px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
       }
@@ -36,8 +37,10 @@
 
       .nav-buttons {
         position: absolute;
-        bottom: 120px;
+        bottom: 1px;
         left: 50%;
+        right: 50%;
+        display: flex;
         transform: translateX(-50%);
         z-index: 10;
       }
