--- a/観光スポット2.html
+++ b/観光スポット2.html
@@ -92,23 +92,30 @@
           desc: '世界最大級の前方後円墳。古代日本の権威を象徴します。'
         },
         {
-          title: '渓雲閣',
-          lat: 37.115,
-          lng: 139.98,
+          title: '百舌鳥古墳群ビジターセンター',
+          lat: 34.56023301912434,
+          lng: 135.48639590009105,
           img: 'images/01.jpg',
           desc: 'にごり湯をかけ流し！'
         },
         {
-          title: '下藤屋',
-          lat: 37.116,
-          lng: 139.981,
+          title: '堺市博物館',
+          lat: 34.55922020660278,
+          lng: 135.48431038289627,
           img: 'images/02.jpg',
           desc: '山の中の癒しの宿'
         },
         {
-          title: '旅館〇〇',
-          lat: 37.117,
-          lng: 139.982,
+          title: '大仙公園 日本庭園',
+          lat: 34.55994182649412,
+          lng: 135.48051898104532,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: 'こ・ふんカフェ',
+          lat: 34.565210137996665,
+          lng: 135.4919852000911,
           img: 'images/03.jpg',
           desc: '歴史ある露天風呂'
         }
