--- a/観光スポット2.html
+++ b/観光スポット2.html
@@ -88,28 +88,28 @@
           title: '仁徳天皇陵古墳',
           lat: 34.5617130885286,
           lng: 135.48565486006336,
-          img: 'https://upload.wikimedia.org/wikipedia/commons/9/9a/Nintoku-tennoryo_Kofun_Tomb_02n3872.jpg',
+          img: 'kofun.jpg',
           desc: '世界最大級の前方後円墳。古代日本の権威を象徴します。'
         },
         {
           title: '百舌鳥古墳群ビジターセンター',
           lat: 34.56023301912434,
           lng: 135.48639590009105,
-          img: 'images/01.jpg',
+          img: 'mozubizita-.jpg',
           desc: 'にごり湯をかけ流し！'
         },
         {
           title: '堺市博物館',
           lat: 34.55922020660278,
           lng: 135.48431038289627,
-          img: 'images/02.jpg',
+          img: 'hakubutukan.jpg',
           desc: '山の中の癒しの宿'
         },
         {
           title: '大仙公園 日本庭園',
           lat: 34.55994182649412,
           lng: 135.48051898104532,
-          img: 'images/03.jpg',
+          img: 'niwa.jpg',
           desc: '歴史ある露天風呂'
         },
         {
