--- a/観光スポット2.html
+++ b/観光スポット2.html
@@ -38,7 +38,8 @@
       }
 
       .card img {
-        width: 100%;
+        width: 15%;
+        height: auto;
         border-radius: 8px;
       }
 
