ボタンを画像に変更

--- a/観光スポット2.html
+++ b/観光スポット2.html
@@ -77,8 +77,8 @@
     <div id="instruction">観光スポットをスライドしてご覧ください！</div>
 
     <div class="nav-buttons">
-      <span id="left">←</span>
-      <span id="right">→</span>
+      <img id="left" src="left_botton.jpeg" alt="左" width="50" height="50" />
+      <img id="right" src="right_botton.jpeg" alt="右" width="50" height="50" />
     </div>
 
     <div class="card-container" id="cardContainer"></div>
