--- a/観光スポット2.html
+++ b/観光スポット2.html
@@ -25,22 +25,57 @@
         overflow-x: auto;
         background: rgba(255, 255, 255, 0.9);
         z-index: 5;
+        justify-content: center;
       }
 
       .card {
-        flex: 0 0 100%;
-        display: flex;
-        flex-direction: column;
+        position: relative;
+        flex: 0 0 80%;
         background: white;
-        padding: 10px;
         border-radius: 16px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 60px;
+        height: 250px;
       }
 
-      .card img {
+      .card-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .card-content img {
         width: 15%;
         height: auto;
         border-radius: 8px;
+        margin: 10px 0;
+      }
+
+      .card-content h2,
+      .card-content p {
+        margin: 10px 0;
+      }
+
+      .nav-button {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        z-index: 10;
+      }
+
+      .nav-button.left {
+        left: 10px;
+      }
+
+      .nav-button.right {
+        right: 10px;
       }
 
       #instruction {
@@ -57,9 +92,6 @@
   </head>
   <body>
     <div id="map"></div>
-
-    <div id="instruction">観光スポットをスライドしてご覧ください！</div>
-
     <div class="card-container" id="cardContainer"></div>
 
     <script>
@@ -112,13 +144,24 @@
         const cardEl = document.createElement('div');
         cardEl.className = 'card';
         cardEl.innerHTML = `
-          <img id="left" src="left_botton.jpeg" alt="左" width="50" height="50" />
+        <img id="left" class="nav-button left" src="left_botton.jpeg" alt="←">
+        <div class="card-content">
           <h2>${spot.title}</h2>
           <img src="${spot.img}" alt="${spot.title}">
           <p>${spot.desc}</p>
-          <img id="right" src="right_botton.jpeg" alt="右" width="50" height="50" />
-        `;
+        </div>
+        <img id="right" class="nav-button right" src="right_botton.jpeg" alt="→">
+      `;
         container.appendChild(cardEl);
+
+        // 矢印クリック時の動作
+        document.getElementById('left').addEventListener('click', () => {
+          showCard(index - 1);
+        });
+
+        document.getElementById('right').addEventListener('click', () => {
+          showCard(index + 1);
+        });
       }
 
       function showCard(index) {
@@ -128,14 +171,6 @@
         const spot = spots[currentIndex];
         map.panTo({ lat: spot.lat, lng: spot.lng });
       }
-
-      document.getElementById('left').addEventListener('click', () => {
-        showCard(currentIndex - 1);
-      });
-
-      document.getElementById('right').addEventListener('click', () => {
-        showCard(currentIndex + 1);
-      });
 
       function initMap() {
         const center = { lat: spots[0].lat, lng: spots[0].lng };
@@ -160,7 +195,7 @@
       }
     </script>
 
-    <!-- Google Maps API 読み込み（必ず自分のAPIキーに変更） -->
+    <!-- Google Maps API 読み込み（ご自身のAPIキーに変更してください） -->
     <script
       async
       defer
