--- a/観光スポット2.html
+++ b/観光スポット2.html
@@ -130,6 +130,90 @@
           lng: 135.4919852000911,
           img: 'images/03.jpg',
           desc: '歴史ある露天風呂'
+        },
+        {
+          title: '堺市都市緑化センター',
+          lat: 34.55638334343915,
+          lng: 135.483294965193,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: '堺市茶室「伸庵」「黄梅庵」',
+          lat: 34.560155574462414,
+          lng: 135.48403175188588,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: '南宗寺',
+          lat: 34.56888958690531,
+          lng: 135.46950172726895,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: '百舌鳥八幡宮',
+          lat: 34.55466971519879,
+          lng: 135.4948733019398,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: '卵かけめし 肉すい専門 やまや',
+          lat: 34.559108904829685,
+          lng: 135.4748054471122,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: 'とんかつ・洋食の店ICHIBAN',
+          lat: 34.56324951439168,
+          lng: 135.49269898015325,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: 'ジェラッテリア&カフェ リカリカ',
+          lat: 34.56639489542492,
+          lng: 135.4980045781432,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: 'はや 総本店',
+          lat: 34.567969175753454,
+          lng: 135.49010939790872,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: '菜食和合茶倉（ちゃくら）',
+          lat: 34.56776229887743,
+          lng: 135.4842997220481,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: 'WING TIP',
+          lat: 34.562737432268975,
+          lng: 135.48076357251728,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: 'ロルモンクレープ',
+          lat: 34.563391317898315,
+          lng: 135.479796674714,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: '花茶碗（古墳カレー）',
+          lat: 34.557732220504576,
+          lng: 135.48764677159676,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
         }
       ];
 
