--- a/観光スポット2.html
+++ b/観光スポット2.html
@@ -167,9 +167,16 @@
           desc: '歴史ある露天風呂'
         },
         {
-          title: 'とんかつ・洋食の店ICHIBAN',
+          title: 'アサイー工房 三国ヶ丘店 アサイー専門店',
           lat: 34.56324951439168,
           lng: 135.49269898015325,
+          img: 'images/03.jpg',
+          desc: '歴史ある露天風呂'
+        },
+        {
+          title: 'とんかつ・洋食の店ICHIBAN',
+          lat: 34.56307993738588,
+          lng: 135.49228231132642,
           img: 'images/03.jpg',
           desc: '歴史ある露天風呂'
         },
