--- a/観光コース2.html
+++ b/観光コース2.html
@@ -36,7 +36,7 @@
       }
 
       .course-title {
-        background-color: #2c5e39;
+        background-color: #5cd9ff;
         color: white;
         font-size: 18px;
         padding: 6px;
@@ -59,7 +59,7 @@
       .detail-buttons button {
         flex: 1;
         padding: 10px;
-        background-color: #2c5e39;
+        background-color: #fb6482;
         color: white;
         border: none;
         border-radius: 6px;
