--- a/観光コース2.html
+++ b/観光コース2.html
@@ -36,7 +36,7 @@
       }
 
       .course-title {
-        background-color: #41c2ea;
+        background-color: #4ebadb;
         color: white;
         font-size: 18px;
         padding: 6px;
@@ -59,7 +59,7 @@
       .detail-buttons button {
         flex: 1;
         padding: 10px;
-        background-color: #5979e0;
+        background-color: #5c78d6;
         color: white;
         border: none;
         border-radius: 6px;
