--- a/kankou3.html
+++ b/kankou3.html
@@ -44,6 +44,7 @@
       margin-bottom: 20px;
       padding-bottom: 10px;
       border-bottom: 1px dashed #ccc;
+      position: relative;
     }
 
     .spot:last-child {
@@ -60,6 +61,16 @@
       font-size: 1em;
       color: #555;
     }
+
+    /* 各スポットの間に矢印を追加する */
+    .spot:not(:last-child)::after {
+      content: "↓";
+      display: block;
+      text-align: center;
+      font-size: 1.5em;
+      margin-top: 10px;
+      color: #4CAF50;
+    }
   </style>
 </head>
 <body>
@@ -71,7 +82,7 @@
     <section class="overview">
       <h2>コースの概要</h2>
       <p>
-        大阪は、歴史と現代文化が融合する魅力あふれる都市です。このコースでは、大阪の代表的な観光スポットとグルメエリアを効率よく巡るルートをご紹介します。初めに大阪のシンボルである大阪城からスタートし、新鮮な海産物が並ぶ黒門市場、にぎやかな繁華街なんば・道頓堀、最新ファッションを楽しめる心斎橋、そしてレトロな雰囲気が漂う通天閣・新世界・最後に絶景の梅田スカイビルと、バランスよく大阪の魅力を体験できます。
+        大阪は、歴史と現代文化が融合する魅力あふれる都市です。このコースでは、大阪の代表的な観光スポットとグルメエリアを効率よく巡るルートをご紹介します。初めに大阪のシンボルである大阪城からスタートし、新鮮な海産物が並ぶ黒門市場、にぎやかな繁華街なんば・道頓堀、最新ファッションを楽しめる心斎橋、そしてレトロな雰囲気が漂う通天閣・新世界、最後に絶景の梅田スカイビルと、バランスよく大阪の魅力を体験できます。
       </p>
     </section>
 
@@ -124,4 +135,3 @@
   </div>
 </body>
 </html>
-
