--- a/観光コース　決定.html
+++ b/観光コース　決定.html
@@ -97,32 +97,37 @@
         <h2>観光スポット一覧</h2>
         <div class="card-list">
           <div class="card">
-            <div class="card-title">1. 大阪城</div>
+            <div class="card-title">1. 百舌鳥古墳群ビジターセンター</div>
             <div class="card-description">大阪の歴史を感じる象徴的な城。広大な公園と天守閣の迫力を楽しめます。</div>
           </div>
 
           <div class="card">
-            <div class="card-title">2. 黒門市場</div>
-            <div class="card-description">新鮮な海産物や地元グルメが揃う市場。食べ歩きにも最適なエリアです。</div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">3. なんば・道頓堀</div>
+            <div class="card-title">2. 堺市博物館</div>
             <div class="card-description">
-              大阪の繁華街として有名。グリコの看板前で写真撮影やたこ焼きの試食を楽しめます。
+              「ここに来れば堺の歴史と文化がわかる」博物館。古代から近代まで堺の歴史を時代ごとにゾーン展開、貴重な多くの出土品や堺のまちが培ってきた文化財などの展示を、タイムスリップするような気分で見学できます。
+              また、2021年3月に古代常設展示などをリニューアルし、百舌鳥古墳群についてより深く知ることができるようになっています。
             </div>
           </div>
 
           <div class="card">
-            <div class="card-title">4. 心斎橋</div>
+            <div class="card-title">3. こ・ふんカフェ</div>
             <div class="card-description">
-              おしゃれなショップが立ち並ぶエリア。ショッピング好きにぴったりのスポットです。
+              仁徳天皇陵古墳の近くにあるカフェ。古墳を感じられる可愛いスイーツがたくさん。1番人気は、濃い抹茶の上にアイスクリーム・白玉・あんこが乗った❝古墳アイス❞。
             </div>
           </div>
 
           <div class="card">
-            <div class="card-title">5. 通天閣・新世界</div>
-            <div class="card-description">レトロな雰囲気が魅力のエリア。串カツなど大阪名物グルメが楽しめます。</div>
+            <div class="card-title">4. 仁徳天皇陵古墳（大山古墳・大仙陵古墳）</div>
+            <div class="card-description">
+              日本最大の前方後円墳、百舌鳥耳原三陵のひとつで、前方部を南に向けた墳丘は、全長約486m、後円部径約249m、高さ約35.8m、前方部幅約307m、高さ約33.9mの規模で、三段に築成されています。左右のくびれ部に造出しがあり、三重の濠が巡っています。陪塚と考えられる古墳は10基以上に及び、5世紀中ごろの築造と考えられます。
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">5. 大仙公園 日本庭園</div>
+            <div class="card-description">
+              大仙公園内に市制100周年を記念して造られた伝統的な作庭技術を駆使した2.6haの美しい築山林泉廻遊式庭園。花木に囲まれ風情豊かなあずまや青苔亭、映波橋･印月橋、杜若池、飛流瀑など、美しい池、流水やハナショウブ･梅など四季の花で彩られます。また景色を楽しみながら、お抹茶と菓子をお楽しみいただけます（有料）。
+            </div>
           </div>
 
           <div class="card">
