ビジターセンター

--- a/観光コース　決定.html
+++ b/観光コース　決定.html
@@ -98,7 +98,9 @@
         <div class="card-list">
           <div class="card">
             <div class="card-title">1. 百舌鳥古墳群ビジターセンター</div>
-            <div class="card-description">大阪の歴史を感じる象徴的な城。広大な公園と天守閣の迫力を楽しめます。</div>
+            <div class="card-description">
+              大世界遺産「百舌鳥・古市古墳群」の価値や魅力を伝えるガイダンス機能等を備えた施設です。8K空撮映像で古墳群の雄大さを体感できるシアターや古墳グッズの販売のほか、観光案内所では、レンタサイクルの貸し出しや手荷物預かりサービス等も実施しています。本施設内の各コーナーに関する概要は以下のとおりです。
+            </div>
           </div>
 
           <div class="card">
@@ -129,10 +131,6 @@
               大仙公園内に市制100周年を記念して造られた伝統的な作庭技術を駆使した2.6haの美しい築山林泉廻遊式庭園。花木に囲まれ風情豊かなあずまや青苔亭、映波橋･印月橋、杜若池、飛流瀑など、美しい池、流水やハナショウブ･梅など四季の花で彩られます。また景色を楽しみながら、お抹茶と菓子をお楽しみいただけます（有料）。
             </div>
           </div>
-
-          <div class="card">
-            <div class="card-title">6. 梅田スカイビル</div>
-            <div class="card-description">夜景が美しいスポット。ロマンチックな夕暮れ時の訪問がおすすめです。</div>
           </div>
         </div>
       </section>
