--- a/観光コース　決定.html
+++ b/観光コース　決定.html
@@ -14,7 +14,7 @@
       }
 
       header {
-        background-color: #4caf50;
+        background-color: #4ebadb;;
         color: #fff;
         padding: 20px 0;
         text-align: center;
