--- a/観光コース　決定.html
+++ b/観光コース　決定.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>大阪観光おすすめコース</title>
+    <title>大仙公園コース</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
       }
 
       header {
-        background-color: #4ebadb;;
+        background-color: #4ebadb;
         color: #fff;
         padding: 20px 0;
         text-align: center;
@@ -28,7 +28,7 @@
 
       h2 {
         color: #333;
-        border-bottom: 2px solid #4caf50;
+        border-bottom: 2px solid #5c78d6;
         padding-bottom: 10px;
         margin-bottom: 20px;
       }
@@ -57,13 +57,13 @@
         left: 50%;
         transform: translateX(-50%);
         font-size: 2em;
-        color: #4caf50;
+        color: #5c78d6;
       }
 
       .card-title {
         font-size: 1.3em;
         font-weight: bold;
-        color: #4caf50;
+        color: #5c78d6;
         margin-bottom: 10px;
       }
 
@@ -83,7 +83,7 @@
   </head>
   <body>
     <header>
-      <h1>大阪観光おすすめコース</h1>
+      <h1>大仙公園コース</h1>
     </header>
     <div class="container">
       <section class="overview">
