--- a/ホテル.html
+++ b/ホテル.html
@@ -97,7 +97,7 @@
     <script>
       const spots = [
         {
-          title: '仁徳天皇陵古墳',
+          title: 'あいうえお',
           lat: 34.5617130885286,
           lng: 135.48565486006336,
           img: 'kofun.jpg',
