・観光コース１、２追加 ・ボタンと連動

--- a/観光コース2.html
+++ b/観光コース2.html
@@ -132,7 +132,7 @@
               <img class="main-image" src="${spot.img}" alt="${spot.name}">
               <p class="description">${spot.desc}</p>
               <div class="detail-buttons">
-                <button onclick="window.location.href='観光コース　決定.html';">コース詳細</button>
+                <button onclick="window.location.href='観光コース　決定${spot}.html';">コース詳細</button>
                 <button onclick="alert('地図表示')">マップ</button>
               </div>
               <img id="right" class="nav-button right" src="right_button.png" alt="→">
