3コース目を追加

--- a/観光コース2.html
+++ b/観光コース2.html
@@ -117,6 +117,13 @@
           img: 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Daisen_Park_Sakai.jpg/640px-Daisen_Park_Sakai.jpg',
           desc: '緑豊かな公園で、散策やピクニックに最適。',
           id: 2
+        },
+        {
+          title: '3/10 コース',
+          name: '歴史巡り',
+          img: 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Daisen_Park_Sakai.jpg/640px-Daisen_Park_Sakai.jpg',
+          desc: '緑豊かな公園で、散策やピクニックに最適。',
+          id: 3
         }
       ];
 
