--- a/観光コース2.html
+++ b/観光コース2.html
@@ -142,7 +142,7 @@
               <p class="description">${spot.desc}</p>
               <div class="detail-buttons">
                 <button onclick="window.location.href='観光コース　決定${spot.id}.html';">コース詳細</button>
-                <button onclick="alert('地図表示')">マップ</button>
+                <button onclick="window.location.href='コース1マップ.html';">マップ</button>
               </div>
               <img id="right" class="nav-button right" src="right_button.png" alt="→">
             `;
@@ -167,4 +167,3 @@
     </script>
   </body>
 </html>
-
