--- a/ホテル2.html
+++ b/ホテル2.html
@@ -7,42 +7,100 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        margin: 20px;
-      }
-      .hotel-list {
-        list-style: none;
+        margin: 0;
         padding: 0;
       }
-      .hotel-item {
+      .container {
+        padding: 20px;
+      }
+      .hotel-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+      }
+      .hotel {
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding: 15px;
+        width: calc(33% - 40px);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+      }
+      .hotel img {
+        max-width: 100%;
+        border-radius: 8px;
+      }
+      .hotel h3 {
         margin: 10px 0;
+        font-size: 1.2em;
       }
-      .hotel-item a {
-        text-decoration: none;
-        color: #007bff;
-      }
-      .hotel-item a:hover {
-        text-decoration: underline;
+      .map {
+        margin-top: 40px;
+        height: 400px;
+        width: 100%;
       }
     </style>
   </head>
   <body>
-    <h1>ホテル一覧</h1>
-    <ul class="hotel-list">
-      <li class="hotel-item">
-        <a href="https://www.google.com/maps?q=35.0116,135.7681" target="_blank">ホテル京都</a>
-      </li>
-      <li class="hotel-item">
-        <a href="https://www.google.com/maps?q=34.6937,135.5023" target="_blank">ホテル大阪</a>
-      </li>
-      <li class="hotel-item">
-        <a href="https://www.google.com/maps?q=35.6895,139.6917" target="_blank">ホテル東京</a>
-      </li>
-      <li class="hotel-item">
-        <a href="https://www.google.com/maps?q=34.6851,135.8050" target="_blank">ホテル奈良</a>
-      </li>
-      <li class="hotel-item">
-        <a href="https://www.google.com/maps?q=34.6901,135.1955" target="_blank">ホテル神戸</a>
-      </li>
-    </ul>
+    <div class="container">
+      <h1>ホテル一覧</h1>
+      <div class="hotel-list">
+        <div class="hotel" data-lat="34.5784" data-lng="135.4847">
+          <img src="https://via.placeholder.com/150" alt="ホテルサンプラザ堺本館" />
+          <h3>ホテルサンプラザ堺本館</h3>
+          <p>おもてなしのこころを大切にするホテルです。</p>
+        </div>
+        <div class="hotel" data-lat="34.5756" data-lng="135.4820">
+          <img src="https://via.placeholder.com/150" alt="紙カフェ" />
+          <h3>紙カフェ</h3>
+          <p>紙や文具の魅力を楽しむカフェ＆レンタルスペース。</p>
+        </div>
+        <div class="hotel" data-lat="34.5710" data-lng="135.4805">
+          <img src="https://via.placeholder.com/150" alt="ホテルアストンプラザ大阪堺" />
+          <h3>ホテルアストンプラザ大阪堺</h3>
+          <p>便利な立地と快適な客室が特徴のホテル。</p>
+        </div>
+      </div>
+      <div id="map" class="map"></div>
+    </div>
+
+    <script>
+      let map;
+      let marker;
+
+      function initMap() {
+        // 地図の初期設定
+        const center = { lat: 34.5733, lng: 135.4828 }; // 堺市の例
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: center
+        });
+
+        // 初期マーカーを非表示の状態で作成
+        marker = new google.maps.Marker({
+          map: map
+        });
+
+        // 各ホテルのクリックイベントを設定
+        document.querySelectorAll('.hotel').forEach((hotel) => {
+          hotel.addEventListener('click', () => {
+            const lat = parseFloat(hotel.getAttribute('data-lat'));
+            const lng = parseFloat(hotel.getAttribute('data-lng'));
+            const position = { lat, lng };
+
+            // マップを移動し、マーカーを設定
+            map.setCenter(position);
+            map.setZoom(14); // クリック時にズームイン
+            marker.setPosition(position);
+            marker.setVisible(true); // マーカーを表示
+          });
+        });
+      }
+    </script>
+    <script
+      async
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAanGL60bWCdRLdFjyk-Xf_UI-HPnbHgXc&callback=initMap"
+    ></script>
   </body>
 </html>
