ホテル変更

--- a/ホテル2.html
+++ b/ホテル2.html
@@ -22,7 +22,7 @@
         border: 1px solid #ccc;
         border-radius: 8px;
         padding: 15px;
-        width: calc(33% - 40px);
+        width: calc(15% - 20px);
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         cursor: pointer;
       }
@@ -35,8 +35,8 @@
         font-size: 1.2em;
       }
       .map {
-        margin-top: 40px;
-        height: 400px;
+        margin-top: 300px;
+        height: 600px;
         width: 100%;
       }
     </style>
@@ -45,6 +45,12 @@
     <div class="container">
       <h1>ホテル一覧</h1>
       <div class="hotel-list">
+        <div class="hotel" data-lat="34.5784" data-lng="135.4847">
+          <img src="https://via.placeholder.com/150" alt="ホテルサンプラザ堺本館" />
+          <h3>ホテル アゴーラ リージェンシー 大阪堺</h3>
+          <p>客室は、スイート、ツイン、ダブルの各タイプを持つ全241室。</p>
+        </div>
+
         <div class="hotel" data-lat="34.5784" data-lng="135.4847">
           <img src="https://via.placeholder.com/150" alt="ホテルサンプラザ堺本館" />
           <h3>ホテルサンプラザ堺本館</h3>
