--- a/ホテル2.html
+++ b/ホテル2.html
@@ -10,6 +10,12 @@
         margin: 0;
         padding: 0;
       }
+      header {
+        background-color: #4ebadb;
+        color: #fff;
+        padding: 20px 0;
+        text-align: center;
+      }
       .container {
         padding: 20px;
       }
@@ -19,13 +25,14 @@
         gap: 20px;
       }
       .hotel {
-        border: 1px solid #ccc;
+        border: 1px solid #ba9db9;
         border-radius: 8px;
         padding: 15px;
         width: calc(15% - 20px);
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         cursor: pointer;
       }
+
       .hotel img {
         max-width: 100%;
         border-radius: 8px;
@@ -42,10 +49,12 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <header>
       <h1>ホテル一覧</h1>
+    </header>
+    <div class="container">
       <div class="hotel-list">
-        <div class="hotel" data-lat="34.5784" data-lng="135.4847">
+        <div class="hotel" data-lat="34.582917167307194" data-lng="135.46756988124363">
           <img src="https://via.placeholder.com/150" alt="ホテルサンプラザ堺本館" />
           <h3>ホテル アゴーラ リージェンシー 大阪堺</h3>
           <p>客室は、スイート、ツイン、ダブルの各タイプを持つ全241室。</p>
