観光コース内容変更

--- a/観光コース　決定2.html
+++ b/観光コース　決定2.html
@@ -89,7 +89,7 @@
       <section class="overview">
         <h2>コースの概要</h2>
         <p>
-          大阪は、歴史と現代文化が融合する魅力あふれる都市です。このコースでは、大阪の代表的な観光スポットとグルメエリアを効率よく巡るルートをご紹介します。
+          仁徳天皇陵古墳を中心に大仙公園周辺を観光するコースです。
         </p>
       </section>
 
