コースマップ1

--- a/コース1マップ.html
+++ b/コース1マップ.html
@@ -101,21 +101,21 @@
           lat: 34.56023301912434,
           lng: 135.48639590009105,
           img: 'mozubizita-.jpg',
-          desc: 'にごり湯をかけ流し！'
+          desc: '観光案内所・シアタールーム・グッズ販売などを備えた施設です。'
         },
         {
           title: '堺市博物館',
           lat: 34.55922020660278,
           lng: 135.48431038289627,
           img: 'hakubutukan.jpg',
-          desc: '山の中の癒しの宿'
+          desc: '堺の歴史と文化がわかる博物館。古代から近代までの展示があります。'
         },
         {
           title: 'こ・ふんカフェ',
           lat: 34.565210137996665,
           lng: 135.4919852000911,
-          img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          img: 'kofuncafe.jpg',
+          desc: '古墳をテーマにしたカフェ。古墳グッズも販売しています。'
         },
         {
           title: '仁徳天皇陵古墳',
@@ -129,7 +129,7 @@
           lat: 34.55994182649412,
           lng: 135.48051898104532,
           img: 'niwa.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '大仙公園内にある日本庭園。四季折々の美しい景色を楽しめます。'
         }
       ];
 
