観光コース１徒歩

--- a/観光コース　決定1.html
+++ b/観光コース　決定1.html
@@ -36,7 +36,7 @@
       .card-list {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 40px; /* 矢印と文字のスペースを確保するため少し広げる */
       }
 
       .card {
@@ -51,13 +51,15 @@
       }
 
       .card:not(:last-child)::after {
-        content: '↓';
+        content: '↓ ' attr(data-arrow-text); /* HTMLのdata-arrow-text属性の値を表示 */
         position: absolute;
-        bottom: -25px;
+        bottom: -30px;
         left: 50%;
         transform: translateX(-50%);
-        font-size: 2em;
+        font-size: 1.2em; /* 文字に合わせてサイズを調整 */
+        font-weight: bold;
         color: #5c78d6;
+        white-space: nowrap; /* 文字が改行されないようにする */
       }
 
       .card-title {
@@ -96,15 +98,15 @@
       <section class="spots">
         <h2>観光スポット一覧</h2>
         <div class="card-list">
-          <div class="card">
+          <div class="card" data-arrow-text="まずは徒歩5分で博物館へ！">
             <div class="card-title">1. 百舌鳥古墳群ビジターセンター</div>
             <div class="card-description">
-              大世界遺産「百舌鳥・古市古墳群」の価値や魅力を伝えるガイダンス機能等を備えた施設です。8K空撮映像で古墳群の雄大さを体感できるシアターや古墳グッズの販売のほか、観光案内所では、レンタサイクルの貸し出しや手荷物預かりサービス等も実施しています。本施設内の各コーナーに関する概要は以下のとおりです。
+              大世界遺産「百舌鳥・古市古墳群」の価値や魅力を伝えるガイダンス機能等を備えた施設です。8K空撮映像で古墳群の雄大さを体感できるシアターや古墳グッズの販売のほか、観光案内所では、レンタサイクルの貸し出しや手荷物預かりサービス等も実施しています。本施設内の各コーナーに関する概要は以下のとおりです。
             </div>
             <img src="mozubizita-.jpg" alt="百舌鳥古墳群ビジターセンター" class="card-image" />
           </div>
 
-          <div class="card">
+          <div class="card" data-arrow-text="古墳を眺めながらカフェで一休み（徒歩10分）">
             <div class="card-title">2. 堺市博物館</div>
             <div class="card-description">
               「ここに来れば堺の歴史と文化がわかる」博物館。古代から近代まで堺の歴史を時代ごとにゾーン展開、貴重な多くの出土品や堺のまちが培ってきた文化財などの展示を、タイムスリップするような気分で見学できます。
@@ -113,7 +115,7 @@
             <img src="hakubutukan.jpg" alt="堺市博物館" class="card-image" />
           </div>
 
-          <div class="card">
+          <div class="card" data-arrow-text="いよいよメインの仁徳天皇陵古墳へ（徒歩2分）">
             <div class="card-title">3. こ・ふんカフェ</div>
             <div class="card-description">
               仁徳天皇陵古墳の近くにあるカフェ。古墳を感じられる可愛いスイーツがたくさん。1番人気は、濃い抹茶の上にアイスクリーム・白玉・あんこが乗った❝古墳アイス❞。
@@ -121,7 +123,7 @@
             <img src="kofuncafe.jpg" alt="こ・ふんカフェ" class="card-image" />
           </div>
 
-          <div class="card">
+          <div class="card" data-arrow-text="最後は美しい日本庭園を散策（徒歩5分）">
             <div class="card-title">4. 仁徳天皇陵古墳（大山古墳・大仙陵古墳）</div>
             <div class="card-description">
               日本最大の前方後円墳、百舌鳥耳原三陵のひとつで、前方部を南に向けた墳丘は、全長約486m、後円部径約249m、高さ約35.8m、前方部幅約307m、高さ約33.9mの規模で、三段に築成されています。左右のくびれ部に造出しがあり、三重の濠が巡っています。陪塚と考えられる古墳は10基以上に及び、5世紀中ごろの築造と考えられます。
@@ -135,7 +137,6 @@
               大仙公園内に市制100周年を記念して造られた伝統的な作庭技術を駆使した2.6haの美しい築山林泉廻遊式庭園。花木に囲まれ風情豊かなあずまや青苔亭、映波橋･印月橋、杜若池、飛流瀑など、美しい池、流水やハナショウブ･梅など四季の花で彩られます。また景色を楽しみながら、お抹茶と菓子をお楽しみいただけます（有料）。
             </div>
             <img src="niwa.jpg" alt="大仙公園 日本庭園" class="card-image" />
-          </div>
           </div>
         </div>
       </section>
